Projeto - Compilador Pascal/Implementacao/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ARRAY
    COMMENT
    DIVIDE_INT
    DOWNTO
    EXP
    LBRACKET
    RBRACKET
    RESERVED
    UMINUS
    UPLUS

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID SEMICOLON block
Rule 2     program -> PROGRAM ID SEMICOLON
Rule 3     block -> const_declaration_part var_declaration_part subroutine_declaration_part compound_statement_score
Rule 4     const_declaration_part -> CONST const_definition
Rule 5     const_declaration_part -> <empty>
Rule 6     const_definition -> ID EQUALS types SEMICOLON const_definition
Rule 7     const_definition -> ID EQUALS types SEMICOLON
Rule 8     var_declaration_part -> VAR var_declaration
Rule 9     var_declaration_part -> <empty>
Rule 10    var_declaration -> identifier_list TWOPOINTS types SEMICOLON var_declaration
Rule 11    var_declaration -> identifier_list TWOPOINTS types SEMICOLON
Rule 12    types -> INTEGER
Rule 13    types -> REAL
Rule 14    types -> STRING
Rule 15    types -> BOOLEAN
Rule 16    types -> CHAR
Rule 17    types -> ID
Rule 18    identifier_list -> ID
Rule 19    identifier_list -> ID COMMA identifier_list
Rule 20    subroutine_declaration_part -> procedure_declaration subroutine_declaration_part
Rule 21    subroutine_declaration_part -> function_declaration subroutine_declaration_part
Rule 22    subroutine_declaration_part -> <empty>
Rule 23    procedure_declaration -> PROCEDURE ID LPARENT param_section RPARENT SEMICOLON
Rule 24    function_declaration -> FUNCTION ID LPARENT param_section RPARENT TWOPOINTS types SEMICOLON
Rule 25    param_section -> identifier_list TWOPOINTS types SEMICOLON param_section
Rule 26    param_section -> <empty>
Rule 27    compound_statement_score -> BEGIN statements END SCORE
Rule 28    compound_statement_score -> BEGIN END SCORE
Rule 29    compound_statement_semicolon -> BEGIN statements END SEMICOLON
Rule 30    compound_statement_semicolon -> BEGIN END SEMICOLON
Rule 31    statements -> statement
Rule 32    statements -> statement statements
Rule 33    statement -> nstatement
Rule 34    statement -> if2_statement
Rule 35    nstatement -> assign_statement
Rule 36    nstatement -> procedure_function_call_statement
Rule 37    nstatement -> IF LPARENT expr_list RPARENT THEN nstatement ELSE nstatement
Rule 38    nstatement -> case_statement
Rule 39    nstatement -> while_statement
Rule 40    nstatement -> repeat_statement
Rule 41    nstatement -> for_statement
Rule 42    nstatement -> compound_statement_semicolon
Rule 43    assign_statement -> ID ASSIGNMENT expr SEMICOLON
Rule 44    procedure_function_call_statement -> ID LPARENT expr_list RPARENT SEMICOLON
Rule 45    if2_statement -> IF LPARENT expr_list RPARENT THEN statement
Rule 46    if2_statement -> IF LPARENT expr_list RPARENT THEN nstatement ELSE if2_statement
Rule 47    while_statement -> WHILE expr DO statement
Rule 48    repeat_statement -> REPEAT statement UNTIL expr SEMICOLON
Rule 49    for_statement -> FOR ID ASSIGNMENT expr TO expr DO statement
Rule 50    case_statement -> CASE expr OF cases END SEMICOLON
Rule 51    cases -> case
Rule 52    cases -> case cases
Rule 53    case -> INTEGER TWOPOINTS statement
Rule 54    case -> REAL TWOPOINTS statement
Rule 55    case -> ID TWOPOINTS statement
Rule 56    expr_list -> expr
Rule 57    expr_list -> expr COMMA expr_list
Rule 58    expr -> expr EQUALS expr
Rule 59    expr -> expr LTHAN expr
Rule 60    expr -> expr GTHAN expr
Rule 61    expr -> expr DIFFERENT expr
Rule 62    expr -> expr GEQUALS expr
Rule 63    expr -> expr LEQUALS expr
Rule 64    expr -> expr PLUS expr
Rule 65    expr -> expr MINUS expr
Rule 66    expr -> expr OR expr
Rule 67    expr -> expr TIMES expr
Rule 68    expr -> expr DIVIDE expr
Rule 69    expr -> expr DIV expr
Rule 70    expr -> expr MOD expr
Rule 71    expr -> expr AND expr
Rule 72    expr -> PLUS expr
Rule 73    expr -> MINUS expr
Rule 74    expr -> factor
Rule 75    factor -> ID
Rule 76    factor -> INTEGER
Rule 77    factor -> REAL
Rule 78    factor -> STRING
Rule 79    factor -> TRUE
Rule 80    factor -> FALSE
Rule 81    factor -> NOT factor

Terminals, with rules where they appear

AND                  : 71
ARRAY                : 
ASSIGNMENT           : 43 49
BEGIN                : 27 28 29 30
BOOLEAN              : 15
CASE                 : 50
CHAR                 : 16
COMMA                : 19 57
COMMENT              : 
CONST                : 4
DIFFERENT            : 61
DIV                  : 69
DIVIDE               : 68
DIVIDE_INT           : 
DO                   : 47 49
DOWNTO               : 
ELSE                 : 37 46
END                  : 27 28 29 30 50
EQUALS               : 6 7 58
EXP                  : 
FALSE                : 80
FOR                  : 49
FUNCTION             : 24
GEQUALS              : 62
GTHAN                : 60
ID                   : 1 2 6 7 17 18 19 23 24 43 44 49 55 75
IF                   : 37 45 46
INTEGER              : 12 53 76
LBRACKET             : 
LEQUALS              : 63
LPARENT              : 23 24 37 44 45 46
LTHAN                : 59
MINUS                : 65 73
MOD                  : 70
NOT                  : 81
OF                   : 50
OR                   : 66
PLUS                 : 64 72
PROCEDURE            : 23
PROGRAM              : 1 2
RBRACKET             : 
REAL                 : 13 54 77
REPEAT               : 48
RESERVED             : 
RPARENT              : 23 24 37 44 45 46
SCORE                : 27 28
SEMICOLON            : 1 2 6 7 10 11 23 24 25 29 30 43 44 48 50
STRING               : 14 78
THEN                 : 37 45 46
TIMES                : 67
TO                   : 49
TRUE                 : 79
TWOPOINTS            : 10 11 24 25 53 54 55
UMINUS               : 
UNTIL                : 48
UPLUS                : 
VAR                  : 8
WHILE                : 47
error                : 

Nonterminals, with rules where they appear

assign_statement     : 35
block                : 1
case                 : 51 52
case_statement       : 38
cases                : 50 52
compound_statement_score : 3
compound_statement_semicolon : 42
const_declaration_part : 3
const_definition     : 4 6
expr                 : 43 47 48 49 49 50 56 57 58 58 59 59 60 60 61 61 62 62 63 63 64 64 65 65 66 66 67 67 68 68 69 69 70 70 71 71 72 73
expr_list            : 37 44 45 46 57
factor               : 74 81
for_statement        : 41
function_declaration : 21
identifier_list      : 10 11 19 25
if2_statement        : 34 46
nstatement           : 33 37 37 46
param_section        : 23 24 25
procedure_declaration : 20
procedure_function_call_statement : 36
program              : 0
repeat_statement     : 40
statement            : 31 32 45 47 48 49 53 54 55
statements           : 27 29 32
subroutine_declaration_part : 3 20 21
types                : 6 7 10 11 24 25
var_declaration      : 8 10
var_declaration_part : 3
while_statement      : 39

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID SEMICOLON block
    (2) program -> . PROGRAM ID SEMICOLON

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . ID SEMICOLON block
    (2) program -> PROGRAM . ID SEMICOLON

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM ID . SEMICOLON block
    (2) program -> PROGRAM ID . SEMICOLON

    SEMICOLON       shift and go to state 4


state 4

    (1) program -> PROGRAM ID SEMICOLON . block
    (2) program -> PROGRAM ID SEMICOLON .
    (3) block -> . const_declaration_part var_declaration_part subroutine_declaration_part compound_statement_score
    (4) const_declaration_part -> . CONST const_definition
    (5) const_declaration_part -> .

    $end            reduce using rule 2 (program -> PROGRAM ID SEMICOLON .)
    CONST           shift and go to state 7
    VAR             reduce using rule 5 (const_declaration_part -> .)
    PROCEDURE       reduce using rule 5 (const_declaration_part -> .)
    FUNCTION        reduce using rule 5 (const_declaration_part -> .)
    BEGIN           reduce using rule 5 (const_declaration_part -> .)

    block                          shift and go to state 5
    const_declaration_part         shift and go to state 6

state 5

    (1) program -> PROGRAM ID SEMICOLON block .

    $end            reduce using rule 1 (program -> PROGRAM ID SEMICOLON block .)


state 6

    (3) block -> const_declaration_part . var_declaration_part subroutine_declaration_part compound_statement_score
    (8) var_declaration_part -> . VAR var_declaration
    (9) var_declaration_part -> .

    VAR             shift and go to state 9
    PROCEDURE       reduce using rule 9 (var_declaration_part -> .)
    FUNCTION        reduce using rule 9 (var_declaration_part -> .)
    BEGIN           reduce using rule 9 (var_declaration_part -> .)

    var_declaration_part           shift and go to state 8

state 7

    (4) const_declaration_part -> CONST . const_definition
    (6) const_definition -> . ID EQUALS types SEMICOLON const_definition
    (7) const_definition -> . ID EQUALS types SEMICOLON

    ID              shift and go to state 11

    const_definition               shift and go to state 10

state 8

    (3) block -> const_declaration_part var_declaration_part . subroutine_declaration_part compound_statement_score
    (20) subroutine_declaration_part -> . procedure_declaration subroutine_declaration_part
    (21) subroutine_declaration_part -> . function_declaration subroutine_declaration_part
    (22) subroutine_declaration_part -> .
    (23) procedure_declaration -> . PROCEDURE ID LPARENT param_section RPARENT SEMICOLON
    (24) function_declaration -> . FUNCTION ID LPARENT param_section RPARENT TWOPOINTS types SEMICOLON

    BEGIN           reduce using rule 22 (subroutine_declaration_part -> .)
    PROCEDURE       shift and go to state 15
    FUNCTION        shift and go to state 16

    subroutine_declaration_part    shift and go to state 12
    procedure_declaration          shift and go to state 13
    function_declaration           shift and go to state 14

state 9

    (8) var_declaration_part -> VAR . var_declaration
    (10) var_declaration -> . identifier_list TWOPOINTS types SEMICOLON var_declaration
    (11) var_declaration -> . identifier_list TWOPOINTS types SEMICOLON
    (18) identifier_list -> . ID
    (19) identifier_list -> . ID COMMA identifier_list

    ID              shift and go to state 19

    var_declaration                shift and go to state 17
    identifier_list                shift and go to state 18

state 10

    (4) const_declaration_part -> CONST const_definition .

    VAR             reduce using rule 4 (const_declaration_part -> CONST const_definition .)
    PROCEDURE       reduce using rule 4 (const_declaration_part -> CONST const_definition .)
    FUNCTION        reduce using rule 4 (const_declaration_part -> CONST const_definition .)
    BEGIN           reduce using rule 4 (const_declaration_part -> CONST const_definition .)


state 11

    (6) const_definition -> ID . EQUALS types SEMICOLON const_definition
    (7) const_definition -> ID . EQUALS types SEMICOLON

    EQUALS          shift and go to state 20


state 12

    (3) block -> const_declaration_part var_declaration_part subroutine_declaration_part . compound_statement_score
    (27) compound_statement_score -> . BEGIN statements END SCORE
    (28) compound_statement_score -> . BEGIN END SCORE

    BEGIN           shift and go to state 22

    compound_statement_score       shift and go to state 21

state 13

    (20) subroutine_declaration_part -> procedure_declaration . subroutine_declaration_part
    (20) subroutine_declaration_part -> . procedure_declaration subroutine_declaration_part
    (21) subroutine_declaration_part -> . function_declaration subroutine_declaration_part
    (22) subroutine_declaration_part -> .
    (23) procedure_declaration -> . PROCEDURE ID LPARENT param_section RPARENT SEMICOLON
    (24) function_declaration -> . FUNCTION ID LPARENT param_section RPARENT TWOPOINTS types SEMICOLON

    BEGIN           reduce using rule 22 (subroutine_declaration_part -> .)
    PROCEDURE       shift and go to state 15
    FUNCTION        shift and go to state 16

    procedure_declaration          shift and go to state 13
    subroutine_declaration_part    shift and go to state 23
    function_declaration           shift and go to state 14

state 14

    (21) subroutine_declaration_part -> function_declaration . subroutine_declaration_part
    (20) subroutine_declaration_part -> . procedure_declaration subroutine_declaration_part
    (21) subroutine_declaration_part -> . function_declaration subroutine_declaration_part
    (22) subroutine_declaration_part -> .
    (23) procedure_declaration -> . PROCEDURE ID LPARENT param_section RPARENT SEMICOLON
    (24) function_declaration -> . FUNCTION ID LPARENT param_section RPARENT TWOPOINTS types SEMICOLON

    BEGIN           reduce using rule 22 (subroutine_declaration_part -> .)
    PROCEDURE       shift and go to state 15
    FUNCTION        shift and go to state 16

    function_declaration           shift and go to state 14
    subroutine_declaration_part    shift and go to state 24
    procedure_declaration          shift and go to state 13

state 15

    (23) procedure_declaration -> PROCEDURE . ID LPARENT param_section RPARENT SEMICOLON

    ID              shift and go to state 25


state 16

    (24) function_declaration -> FUNCTION . ID LPARENT param_section RPARENT TWOPOINTS types SEMICOLON

    ID              shift and go to state 26


state 17

    (8) var_declaration_part -> VAR var_declaration .

    PROCEDURE       reduce using rule 8 (var_declaration_part -> VAR var_declaration .)
    FUNCTION        reduce using rule 8 (var_declaration_part -> VAR var_declaration .)
    BEGIN           reduce using rule 8 (var_declaration_part -> VAR var_declaration .)


state 18

    (10) var_declaration -> identifier_list . TWOPOINTS types SEMICOLON var_declaration
    (11) var_declaration -> identifier_list . TWOPOINTS types SEMICOLON

    TWOPOINTS       shift and go to state 27


state 19

    (18) identifier_list -> ID .
    (19) identifier_list -> ID . COMMA identifier_list

    TWOPOINTS       reduce using rule 18 (identifier_list -> ID .)
    COMMA           shift and go to state 28


state 20

    (6) const_definition -> ID EQUALS . types SEMICOLON const_definition
    (7) const_definition -> ID EQUALS . types SEMICOLON
    (12) types -> . INTEGER
    (13) types -> . REAL
    (14) types -> . STRING
    (15) types -> . BOOLEAN
    (16) types -> . CHAR
    (17) types -> . ID

    INTEGER         shift and go to state 31
    REAL            shift and go to state 32
    STRING          shift and go to state 33
    BOOLEAN         shift and go to state 34
    CHAR            shift and go to state 35
    ID              shift and go to state 29

    types                          shift and go to state 30

state 21

    (3) block -> const_declaration_part var_declaration_part subroutine_declaration_part compound_statement_score .

    $end            reduce using rule 3 (block -> const_declaration_part var_declaration_part subroutine_declaration_part compound_statement_score .)


state 22

    (27) compound_statement_score -> BEGIN . statements END SCORE
    (28) compound_statement_score -> BEGIN . END SCORE
    (31) statements -> . statement
    (32) statements -> . statement statements
    (33) statement -> . nstatement
    (34) statement -> . if2_statement
    (35) nstatement -> . assign_statement
    (36) nstatement -> . procedure_function_call_statement
    (37) nstatement -> . IF LPARENT expr_list RPARENT THEN nstatement ELSE nstatement
    (38) nstatement -> . case_statement
    (39) nstatement -> . while_statement
    (40) nstatement -> . repeat_statement
    (41) nstatement -> . for_statement
    (42) nstatement -> . compound_statement_semicolon
    (45) if2_statement -> . IF LPARENT expr_list RPARENT THEN statement
    (46) if2_statement -> . IF LPARENT expr_list RPARENT THEN nstatement ELSE if2_statement
    (43) assign_statement -> . ID ASSIGNMENT expr SEMICOLON
    (44) procedure_function_call_statement -> . ID LPARENT expr_list RPARENT SEMICOLON
    (50) case_statement -> . CASE expr OF cases END SEMICOLON
    (47) while_statement -> . WHILE expr DO statement
    (48) repeat_statement -> . REPEAT statement UNTIL expr SEMICOLON
    (49) for_statement -> . FOR ID ASSIGNMENT expr TO expr DO statement
    (29) compound_statement_semicolon -> . BEGIN statements END SEMICOLON
    (30) compound_statement_semicolon -> . BEGIN END SEMICOLON

    END             shift and go to state 38
    IF              shift and go to state 44
    ID              shift and go to state 50
    CASE            shift and go to state 51
    WHILE           shift and go to state 52
    REPEAT          shift and go to state 53
    FOR             shift and go to state 54
    BEGIN           shift and go to state 36

    statements                     shift and go to state 37
    statement                      shift and go to state 39
    nstatement                     shift and go to state 40
    if2_statement                  shift and go to state 41
    assign_statement               shift and go to state 42
    procedure_function_call_statement shift and go to state 43
    case_statement                 shift and go to state 45
    while_statement                shift and go to state 46
    repeat_statement               shift and go to state 47
    for_statement                  shift and go to state 48
    compound_statement_semicolon   shift and go to state 49

state 23

    (20) subroutine_declaration_part -> procedure_declaration subroutine_declaration_part .

    BEGIN           reduce using rule 20 (subroutine_declaration_part -> procedure_declaration subroutine_declaration_part .)


state 24

    (21) subroutine_declaration_part -> function_declaration subroutine_declaration_part .

    BEGIN           reduce using rule 21 (subroutine_declaration_part -> function_declaration subroutine_declaration_part .)


state 25

    (23) procedure_declaration -> PROCEDURE ID . LPARENT param_section RPARENT SEMICOLON

    LPARENT         shift and go to state 55


state 26

    (24) function_declaration -> FUNCTION ID . LPARENT param_section RPARENT TWOPOINTS types SEMICOLON

    LPARENT         shift and go to state 56


state 27

    (10) var_declaration -> identifier_list TWOPOINTS . types SEMICOLON var_declaration
    (11) var_declaration -> identifier_list TWOPOINTS . types SEMICOLON
    (12) types -> . INTEGER
    (13) types -> . REAL
    (14) types -> . STRING
    (15) types -> . BOOLEAN
    (16) types -> . CHAR
    (17) types -> . ID

    INTEGER         shift and go to state 31
    REAL            shift and go to state 32
    STRING          shift and go to state 33
    BOOLEAN         shift and go to state 34
    CHAR            shift and go to state 35
    ID              shift and go to state 29

    types                          shift and go to state 57

state 28

    (19) identifier_list -> ID COMMA . identifier_list
    (18) identifier_list -> . ID
    (19) identifier_list -> . ID COMMA identifier_list

    ID              shift and go to state 19

    identifier_list                shift and go to state 58

state 29

    (17) types -> ID .

    SEMICOLON       reduce using rule 17 (types -> ID .)


state 30

    (6) const_definition -> ID EQUALS types . SEMICOLON const_definition
    (7) const_definition -> ID EQUALS types . SEMICOLON

    SEMICOLON       shift and go to state 59


state 31

    (12) types -> INTEGER .

    SEMICOLON       reduce using rule 12 (types -> INTEGER .)


state 32

    (13) types -> REAL .

    SEMICOLON       reduce using rule 13 (types -> REAL .)


state 33

    (14) types -> STRING .

    SEMICOLON       reduce using rule 14 (types -> STRING .)


state 34

    (15) types -> BOOLEAN .

    SEMICOLON       reduce using rule 15 (types -> BOOLEAN .)


state 35

    (16) types -> CHAR .

    SEMICOLON       reduce using rule 16 (types -> CHAR .)


state 36

    (29) compound_statement_semicolon -> BEGIN . statements END SEMICOLON
    (30) compound_statement_semicolon -> BEGIN . END SEMICOLON
    (31) statements -> . statement
    (32) statements -> . statement statements
    (33) statement -> . nstatement
    (34) statement -> . if2_statement
    (35) nstatement -> . assign_statement
    (36) nstatement -> . procedure_function_call_statement
    (37) nstatement -> . IF LPARENT expr_list RPARENT THEN nstatement ELSE nstatement
    (38) nstatement -> . case_statement
    (39) nstatement -> . while_statement
    (40) nstatement -> . repeat_statement
    (41) nstatement -> . for_statement
    (42) nstatement -> . compound_statement_semicolon
    (45) if2_statement -> . IF LPARENT expr_list RPARENT THEN statement
    (46) if2_statement -> . IF LPARENT expr_list RPARENT THEN nstatement ELSE if2_statement
    (43) assign_statement -> . ID ASSIGNMENT expr SEMICOLON
    (44) procedure_function_call_statement -> . ID LPARENT expr_list RPARENT SEMICOLON
    (50) case_statement -> . CASE expr OF cases END SEMICOLON
    (47) while_statement -> . WHILE expr DO statement
    (48) repeat_statement -> . REPEAT statement UNTIL expr SEMICOLON
    (49) for_statement -> . FOR ID ASSIGNMENT expr TO expr DO statement
    (29) compound_statement_semicolon -> . BEGIN statements END SEMICOLON
    (30) compound_statement_semicolon -> . BEGIN END SEMICOLON

    END             shift and go to state 61
    IF              shift and go to state 44
    ID              shift and go to state 50
    CASE            shift and go to state 51
    WHILE           shift and go to state 52
    REPEAT          shift and go to state 53
    FOR             shift and go to state 54
    BEGIN           shift and go to state 36

    statements                     shift and go to state 60
    statement                      shift and go to state 39
    nstatement                     shift and go to state 40
    if2_statement                  shift and go to state 41
    assign_statement               shift and go to state 42
    procedure_function_call_statement shift and go to state 43
    case_statement                 shift and go to state 45
    while_statement                shift and go to state 46
    repeat_statement               shift and go to state 47
    for_statement                  shift and go to state 48
    compound_statement_semicolon   shift and go to state 49

state 37

    (27) compound_statement_score -> BEGIN statements . END SCORE

    END             shift and go to state 62


state 38

    (28) compound_statement_score -> BEGIN END . SCORE

    SCORE           shift and go to state 63


state 39

    (31) statements -> statement .
    (32) statements -> statement . statements
    (31) statements -> . statement
    (32) statements -> . statement statements
    (33) statement -> . nstatement
    (34) statement -> . if2_statement
    (35) nstatement -> . assign_statement
    (36) nstatement -> . procedure_function_call_statement
    (37) nstatement -> . IF LPARENT expr_list RPARENT THEN nstatement ELSE nstatement
    (38) nstatement -> . case_statement
    (39) nstatement -> . while_statement
    (40) nstatement -> . repeat_statement
    (41) nstatement -> . for_statement
    (42) nstatement -> . compound_statement_semicolon
    (45) if2_statement -> . IF LPARENT expr_list RPARENT THEN statement
    (46) if2_statement -> . IF LPARENT expr_list RPARENT THEN nstatement ELSE if2_statement
    (43) assign_statement -> . ID ASSIGNMENT expr SEMICOLON
    (44) procedure_function_call_statement -> . ID LPARENT expr_list RPARENT SEMICOLON
    (50) case_statement -> . CASE expr OF cases END SEMICOLON
    (47) while_statement -> . WHILE expr DO statement
    (48) repeat_statement -> . REPEAT statement UNTIL expr SEMICOLON
    (49) for_statement -> . FOR ID ASSIGNMENT expr TO expr DO statement
    (29) compound_statement_semicolon -> . BEGIN statements END SEMICOLON
    (30) compound_statement_semicolon -> . BEGIN END SEMICOLON

    END             reduce using rule 31 (statements -> statement .)
    IF              shift and go to state 44
    ID              shift and go to state 50
    CASE            shift and go to state 51
    WHILE           shift and go to state 52
    REPEAT          shift and go to state 53
    FOR             shift and go to state 54
    BEGIN           shift and go to state 36

    statement                      shift and go to state 39
    statements                     shift and go to state 64
    nstatement                     shift and go to state 40
    if2_statement                  shift and go to state 41
    assign_statement               shift and go to state 42
    procedure_function_call_statement shift and go to state 43
    case_statement                 shift and go to state 45
    while_statement                shift and go to state 46
    repeat_statement               shift and go to state 47
    for_statement                  shift and go to state 48
    compound_statement_semicolon   shift and go to state 49

state 40

    (33) statement -> nstatement .

    IF              reduce using rule 33 (statement -> nstatement .)
    ID              reduce using rule 33 (statement -> nstatement .)
    CASE            reduce using rule 33 (statement -> nstatement .)
    WHILE           reduce using rule 33 (statement -> nstatement .)
    REPEAT          reduce using rule 33 (statement -> nstatement .)
    FOR             reduce using rule 33 (statement -> nstatement .)
    BEGIN           reduce using rule 33 (statement -> nstatement .)
    END             reduce using rule 33 (statement -> nstatement .)
    UNTIL           reduce using rule 33 (statement -> nstatement .)
    ELSE            reduce using rule 33 (statement -> nstatement .)
    INTEGER         reduce using rule 33 (statement -> nstatement .)
    REAL            reduce using rule 33 (statement -> nstatement .)


state 41

    (34) statement -> if2_statement .

    IF              reduce using rule 34 (statement -> if2_statement .)
    ID              reduce using rule 34 (statement -> if2_statement .)
    CASE            reduce using rule 34 (statement -> if2_statement .)
    WHILE           reduce using rule 34 (statement -> if2_statement .)
    REPEAT          reduce using rule 34 (statement -> if2_statement .)
    FOR             reduce using rule 34 (statement -> if2_statement .)
    BEGIN           reduce using rule 34 (statement -> if2_statement .)
    END             reduce using rule 34 (statement -> if2_statement .)
    UNTIL           reduce using rule 34 (statement -> if2_statement .)
    ELSE            reduce using rule 34 (statement -> if2_statement .)
    INTEGER         reduce using rule 34 (statement -> if2_statement .)
    REAL            reduce using rule 34 (statement -> if2_statement .)


state 42

    (35) nstatement -> assign_statement .

    IF              reduce using rule 35 (nstatement -> assign_statement .)
    ID              reduce using rule 35 (nstatement -> assign_statement .)
    CASE            reduce using rule 35 (nstatement -> assign_statement .)
    WHILE           reduce using rule 35 (nstatement -> assign_statement .)
    REPEAT          reduce using rule 35 (nstatement -> assign_statement .)
    FOR             reduce using rule 35 (nstatement -> assign_statement .)
    BEGIN           reduce using rule 35 (nstatement -> assign_statement .)
    END             reduce using rule 35 (nstatement -> assign_statement .)
    UNTIL           reduce using rule 35 (nstatement -> assign_statement .)
    ELSE            reduce using rule 35 (nstatement -> assign_statement .)
    INTEGER         reduce using rule 35 (nstatement -> assign_statement .)
    REAL            reduce using rule 35 (nstatement -> assign_statement .)


state 43

    (36) nstatement -> procedure_function_call_statement .

    IF              reduce using rule 36 (nstatement -> procedure_function_call_statement .)
    ID              reduce using rule 36 (nstatement -> procedure_function_call_statement .)
    CASE            reduce using rule 36 (nstatement -> procedure_function_call_statement .)
    WHILE           reduce using rule 36 (nstatement -> procedure_function_call_statement .)
    REPEAT          reduce using rule 36 (nstatement -> procedure_function_call_statement .)
    FOR             reduce using rule 36 (nstatement -> procedure_function_call_statement .)
    BEGIN           reduce using rule 36 (nstatement -> procedure_function_call_statement .)
    END             reduce using rule 36 (nstatement -> procedure_function_call_statement .)
    UNTIL           reduce using rule 36 (nstatement -> procedure_function_call_statement .)
    ELSE            reduce using rule 36 (nstatement -> procedure_function_call_statement .)
    INTEGER         reduce using rule 36 (nstatement -> procedure_function_call_statement .)
    REAL            reduce using rule 36 (nstatement -> procedure_function_call_statement .)


state 44

    (37) nstatement -> IF . LPARENT expr_list RPARENT THEN nstatement ELSE nstatement
    (45) if2_statement -> IF . LPARENT expr_list RPARENT THEN statement
    (46) if2_statement -> IF . LPARENT expr_list RPARENT THEN nstatement ELSE if2_statement

    LPARENT         shift and go to state 65


state 45

    (38) nstatement -> case_statement .

    IF              reduce using rule 38 (nstatement -> case_statement .)
    ID              reduce using rule 38 (nstatement -> case_statement .)
    CASE            reduce using rule 38 (nstatement -> case_statement .)
    WHILE           reduce using rule 38 (nstatement -> case_statement .)
    REPEAT          reduce using rule 38 (nstatement -> case_statement .)
    FOR             reduce using rule 38 (nstatement -> case_statement .)
    BEGIN           reduce using rule 38 (nstatement -> case_statement .)
    END             reduce using rule 38 (nstatement -> case_statement .)
    UNTIL           reduce using rule 38 (nstatement -> case_statement .)
    ELSE            reduce using rule 38 (nstatement -> case_statement .)
    INTEGER         reduce using rule 38 (nstatement -> case_statement .)
    REAL            reduce using rule 38 (nstatement -> case_statement .)


state 46

    (39) nstatement -> while_statement .

    IF              reduce using rule 39 (nstatement -> while_statement .)
    ID              reduce using rule 39 (nstatement -> while_statement .)
    CASE            reduce using rule 39 (nstatement -> while_statement .)
    WHILE           reduce using rule 39 (nstatement -> while_statement .)
    REPEAT          reduce using rule 39 (nstatement -> while_statement .)
    FOR             reduce using rule 39 (nstatement -> while_statement .)
    BEGIN           reduce using rule 39 (nstatement -> while_statement .)
    END             reduce using rule 39 (nstatement -> while_statement .)
    UNTIL           reduce using rule 39 (nstatement -> while_statement .)
    ELSE            reduce using rule 39 (nstatement -> while_statement .)
    INTEGER         reduce using rule 39 (nstatement -> while_statement .)
    REAL            reduce using rule 39 (nstatement -> while_statement .)


state 47

    (40) nstatement -> repeat_statement .

    IF              reduce using rule 40 (nstatement -> repeat_statement .)
    ID              reduce using rule 40 (nstatement -> repeat_statement .)
    CASE            reduce using rule 40 (nstatement -> repeat_statement .)
    WHILE           reduce using rule 40 (nstatement -> repeat_statement .)
    REPEAT          reduce using rule 40 (nstatement -> repeat_statement .)
    FOR             reduce using rule 40 (nstatement -> repeat_statement .)
    BEGIN           reduce using rule 40 (nstatement -> repeat_statement .)
    END             reduce using rule 40 (nstatement -> repeat_statement .)
    UNTIL           reduce using rule 40 (nstatement -> repeat_statement .)
    ELSE            reduce using rule 40 (nstatement -> repeat_statement .)
    INTEGER         reduce using rule 40 (nstatement -> repeat_statement .)
    REAL            reduce using rule 40 (nstatement -> repeat_statement .)


state 48

    (41) nstatement -> for_statement .

    IF              reduce using rule 41 (nstatement -> for_statement .)
    ID              reduce using rule 41 (nstatement -> for_statement .)
    CASE            reduce using rule 41 (nstatement -> for_statement .)
    WHILE           reduce using rule 41 (nstatement -> for_statement .)
    REPEAT          reduce using rule 41 (nstatement -> for_statement .)
    FOR             reduce using rule 41 (nstatement -> for_statement .)
    BEGIN           reduce using rule 41 (nstatement -> for_statement .)
    END             reduce using rule 41 (nstatement -> for_statement .)
    UNTIL           reduce using rule 41 (nstatement -> for_statement .)
    ELSE            reduce using rule 41 (nstatement -> for_statement .)
    INTEGER         reduce using rule 41 (nstatement -> for_statement .)
    REAL            reduce using rule 41 (nstatement -> for_statement .)


state 49

    (42) nstatement -> compound_statement_semicolon .

    IF              reduce using rule 42 (nstatement -> compound_statement_semicolon .)
    ID              reduce using rule 42 (nstatement -> compound_statement_semicolon .)
    CASE            reduce using rule 42 (nstatement -> compound_statement_semicolon .)
    WHILE           reduce using rule 42 (nstatement -> compound_statement_semicolon .)
    REPEAT          reduce using rule 42 (nstatement -> compound_statement_semicolon .)
    FOR             reduce using rule 42 (nstatement -> compound_statement_semicolon .)
    BEGIN           reduce using rule 42 (nstatement -> compound_statement_semicolon .)
    END             reduce using rule 42 (nstatement -> compound_statement_semicolon .)
    UNTIL           reduce using rule 42 (nstatement -> compound_statement_semicolon .)
    ELSE            reduce using rule 42 (nstatement -> compound_statement_semicolon .)
    INTEGER         reduce using rule 42 (nstatement -> compound_statement_semicolon .)
    REAL            reduce using rule 42 (nstatement -> compound_statement_semicolon .)


state 50

    (43) assign_statement -> ID . ASSIGNMENT expr SEMICOLON
    (44) procedure_function_call_statement -> ID . LPARENT expr_list RPARENT SEMICOLON

    ASSIGNMENT      shift and go to state 66
    LPARENT         shift and go to state 67


state 51

    (50) case_statement -> CASE . expr OF cases END SEMICOLON
    (58) expr -> . expr EQUALS expr
    (59) expr -> . expr LTHAN expr
    (60) expr -> . expr GTHAN expr
    (61) expr -> . expr DIFFERENT expr
    (62) expr -> . expr GEQUALS expr
    (63) expr -> . expr LEQUALS expr
    (64) expr -> . expr PLUS expr
    (65) expr -> . expr MINUS expr
    (66) expr -> . expr OR expr
    (67) expr -> . expr TIMES expr
    (68) expr -> . expr DIVIDE expr
    (69) expr -> . expr DIV expr
    (70) expr -> . expr MOD expr
    (71) expr -> . expr AND expr
    (72) expr -> . PLUS expr
    (73) expr -> . MINUS expr
    (74) expr -> . factor
    (75) factor -> . ID
    (76) factor -> . INTEGER
    (77) factor -> . REAL
    (78) factor -> . STRING
    (79) factor -> . TRUE
    (80) factor -> . FALSE
    (81) factor -> . NOT factor
